# SyringaCropper

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/res/values/: strings.xml
cropper/: build.gradle.kts
cropper-processor/: .gitignore  build.gradle.kts  rust.gradle.kts
cropper-processor/rust/: Cargo.toml  cropper_processor_bridge.js
cropper-processor/rust/src/: bin.rs  jni_api.rs  lib.rs  wasm_api.rs
cropper-processor/rust/src/core/: color.rs  crop.rs  mod.rs  pipeline.rs  warp.rs
cropper/src/commonMain/kotlin/com/lortunate/syringacropper/: Colors.kt  CropSourceSize.kt  CropperCore.kt  CropperInteractionConfig.kt  CropperStyles.kt
example/: build.gradle.kts
example/src/androidMain/kotlin/com/lortunate/syringacropper/: ImageBitmapDecoder.android.kt  MainActivity.kt
example/src/commonMain/kotlin/com/lortunate/syringacropper/: App.kt  CropResultSession.kt  Utils.kt
example/src/iosMain/kotlin/com/lortunate/syringacropper/: ExampleCropExecutor.ios.kt  ImageBitmapDecoder.ios.kt  MainViewController.kt
example/src/jsMain/kotlin/com/lortunate/syringacropper/: ExampleCropExecutor.js.kt
example/src/jvmMain/kotlin/com/lortunate/syringacropper/: ExampleCropExecutor.jvm.kt  main.kt
example/src/webMain/kotlin/com/lortunate/syringacropper/: ImageBitmapDecoder.web.kt  main.kt
example/src/webMain/resources/: index.html
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
(+42 files in other folders)
